Добавил логику booking и comment